[gd_scene load_steps=11 format=2]

[ext_resource path="res://Materiais/Imagens/cenario_dica/tela2d2.png" type="Texture" id=1]
[ext_resource path="res://Materiais/Botões/BotaoClique.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Dicas.gd" type="Script" id=3]
[ext_resource path="res://Materiais/Botões/botão.png" type="Texture" id=4]
[ext_resource path="res://Materiais/Botões/botãoAoClicar.png" type="Texture" id=5]
[ext_resource path="res://Materiais/fonts/BRITANIC.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Materiais/fonts/COURGETTE-REGULAR.TTF" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 7 )

[node name="tela_dica" type="Node2D"]
script = ExtResource( 3 )

[node name="tela_fundo" type="Sprite" parent="."]
position = Vector2( 184, 320 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="personagem" type="Sprite" parent="tela_fundo"]

[node name="cazumbar" type="TextureButton" parent="tela_fundo"]
margin_left = -294.0
margin_top = -572.0
margin_right = -44.0001
margin_bottom = -472.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="tela_fundo/cazumbar"]
margin_left = 2.0
margin_top = 8.0
margin_right = 236.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="voltar" type="TextureButton" parent="tela_fundo"]
margin_left = 31.9999
margin_top = -588.0
margin_right = 282.0
margin_bottom = -488.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="tela_fundo/voltar"]
margin_left = 2.0
margin_top = 10.0
margin_right = 246.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="Label" type="Label" parent="tela_fundo"]
margin_left = -270.0
margin_top = 90.0
margin_right = 278.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true
clip_text = true

[connection signal="pressed" from="tela_fundo/cazumbar" to="." method="_on_cazumbar_pressed"]
[connection signal="pressed" from="tela_fundo/voltar" to="." method="_on_voltar_pressed"]
